Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 17.0.0 (17.0 branch)
-
fad8c9585 (master)
Description
Boot to Qt (Windows, Linux, macOS)
Device connected via IP
When starting to debug a dialog saying:
Connecting to remote server failed: tcp://<device_ip>:10000: cannot resolve name: Name or service not known
is shown and debugging does not start.
However if one checks from the device, the debug process is running.